[workspace]
members = [
    "autoaes",
    "MakeConfigTool"
]
[package]
name = "RunAsAdministrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoaes ={path ="autoaes"}
configster = "0.1.1"
libc = "0.2.123"
[dependencies.windows]
version = "0.35.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
]
[dependencies.windows-sys]
version = "0.35.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
]